test-cases/invalid/non_const_array.ul
void main() {
    // Shouldn't be allowed because getSize() is not an int literal.
    int[getSize()] array;
}

int getSize() {
    return 10;
}